--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "convite-electronico",
+  "name": "web-application",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,22 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
-    "argon2": "^0.40.1",
-    "clsx": "^2.1.0",
-    "jose": "^5.2.4",
-    "mongoose": "^8.3.1",
-    "next": "14.1.4",
-    "nodemailer": "^6.9.13",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.4",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
+    "@serialport/bindings": "^9.2.9",
+    "argon2": "^0.40.3",
+    "clsx": "^2.1.1",
+    "jose": "^5.6.2",
+    "md5": "^2.3.0",
+    "mongoose": "^8.4.4",
+    "next": "14.2.3",
+    "nodemailer": "^6.9.14",
+    "pdf2json": "^3.1.3",
     "qrcode": "^1.5.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "serialport": "^12.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
